src/test/ui/error-codes/E0128.stderr
error[E0128]: type parameters with a default cannot use forward declared identifiers
  --> $DIR/E0128.rs:11:14
   |
11 | struct Foo<T=U, U=()> { //~ ERROR E0128
   |              ^ defaulted type parameters cannot be forward declared

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0128"
